--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,16 +13,15 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
       - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
         with:
           context: .
           file: ./amd64.Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: |
-            infocus7/trendgenie:latest,infocus7/trendgenie:${{ github.event.release.tag_name }}
+          tags: infocus7/trendgenie:latest,infocus7/trendgenie:${{ github.event.release.tag_name }}
