--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,11 +23,26 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push
+      - name: Build and push (amd64)
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
         with:
           context: .
           file: ./amd64.Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: infocus7/trendgenie:latest,infocus7/trendgenie:${{ github.event.release.tag_name }}
+          platforms: linux/amd64
+          tags: infocus7/trendgenie:latest-amd64
+      - name: Build and push (arm64)
+        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          platforms: linux/arm64
+          tags: infocus7/trendgenie:latest-arm64
+      - name: Create and push multi-architecture manifest
+        run: |
+            docker manifest create infocus7/trendgenie:latest infocus7/trendgenie:latest-amd64 infocus7/trendgenie:latest-arm64
+            docker manifest push infocus7/trendgenie:latest
+          
+            docker manifest create infocus7/trendgenie:${{ github.event.release.tag_name }} infocus7/trendgenie:latest-amd64 infocus7/trendgenie:latest-arm64
+            docker manifest push infocus7/trendgenie:${{ github.event.release.tag_name }}
