--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   publish_docker_image:
+    timeout-minutes: 30
     environment: Release
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -23,23 +24,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push (amd64)
-        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
-        with:
-          context: .
-          file: ./amd64.Dockerfile
-          push: true
-          cache-from: type=registry,ref=infocus7/trendgenie:cache-amd64
-          cache-to: type=inline,mode=max
-          platforms: linux/amd64
-          tags: infocus7/trendgenie:latest,infocus7/trendgenie:${{ github.event.release.tag_name }}
-      - name: Build and push (arm64)
-        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          cache-from: type=registry,ref=infocus7/trendgenie:cache-arm64
-          cache-to: type=inline,mode=max
-          platforms: linux/arm64
-          tags: infocus7/trendgenie:latest,infocus7/trendgenie:${{ github.event.release.tag_name }}
+      - name: Build and push image (amd64)
+        run:
+            docker buildx build --platform linux/amd64 -t infocus7/trendgenie:latest-amd64 --cache-from type=registry,ref=infocus7/trendgenie:cache-amd64 --cache-to type=inline,mode=max --file ./amd64.Dockerfile --push .
+      - name: Build and push image (arm64)
+        run:
+            docker buildx build --platform linux/arm64 -t infocus7/trendgenie:latest-arm64 --cache-from type=registry,ref=infocus7/trendgenie:cache-arm64 --cache-to type=inline,mode=max --file ./Dockerfile --push .
+      - name: Create and push manifest
+        run: |
+          docker manifest create infocus7/trendgenie:latest infocus7/trendgenie:latest-amd64 infocus7/trendgenie:latest-arm64
+          docker manifest push infocus7/trendgenie:latest
+          
+          docker manifest create infocus7/trendgenie:${{ github.event.release.tag_name }} infocus7/trendgenie:latest-amd64 infocus7/trendgenie:latest-arm64
+          docker manifest push infocus7/trendgenie:${{ github.event.release.tag_name }}
