--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,12 +13,6 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3.0.0
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-        with:
-          platform: linux/amd64,linux/arm64
       - name: Log in to Docker Hub
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
@@ -26,14 +20,16 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push image (amd64)
         run:
-            docker buildx build --platform linux/amd64 -t infocus7/trendgenie:latest-amd64 --cache-from type=registry,ref=infocus7/trendgenie:cache-amd64 --cache-to type=inline,mode=max --file ./amd64.Dockerfile --push .
+            docker build -t infocus7/trendgenie:latest-amd64 --cache-from type=registry,ref=infocus7/trendgenie:cache-amd64 --cache-to type=inline,mode=max --file ./amd64.Dockerfile --push .
+            docker push infocus7/trendgenie:latest-amd64
       - name: Build and push image (arm64)
         run:
-            docker buildx build --platform linux/arm64 -t infocus7/trendgenie:latest-arm64 --cache-from type=registry,ref=infocus7/trendgenie:cache-arm64 --cache-to type=inline,mode=max --file ./Dockerfile --push .
+            docker build -t infocus7/trendgenie:latest-arm64 --cache-from type=registry,ref=infocus7/trendgenie:cache-arm64 --cache-to type=inline,mode=max --file ./arm64.Dockerfile --push .
+            docker push infocus7/trendgenie:latest-arm64
       - name: Create and push manifest
         run: |
-          docker manifest create infocus7/trendgenie:latest infocus7/trendgenie:latest-amd64 infocus7/trendgenie:latest-arm64
+          docker manifest create infocus7/trendgenie:latest --amend infocus7/trendgenie:latest-amd64 --amend infocus7/trendgenie:latest-arm64
           docker manifest push infocus7/trendgenie:latest
           
-          docker manifest create infocus7/trendgenie:${{ github.event.release.tag_name }} infocus7/trendgenie:latest-amd64 infocus7/trendgenie:latest-arm64
+          docker manifest create infocus7/trendgenie:${{ github.event.release.tag_name }} --amend infocus7/trendgenie:latest-amd64 --amend infocus7/trendgenie:latest-arm64
           docker manifest push infocus7/trendgenie:${{ github.event.release.tag_name }}
