--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,11 +23,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push image (amd64)
         run: |
-            docker build -f ./amd64.Dockerfile -t infocus7/trendgenie:latest-amd64 .
+            docker build --no-cache -f ./amd64.Dockerfile -t infocus7/trendgenie:latest-amd64 .
             docker push infocus7/trendgenie:latest-amd64
       - name: Build and push image (arm64)
         run:
-            docker build -f ./Dockerfile -t infocus7/trendgenie:latest-arm64 .
+            docker build --no-cache -f ./Dockerfile -t infocus7/trendgenie:latest-arm64 .
             docker push infocus7/trendgenie:latest-arm64
       - name: Create and push manifest
         run: |
