--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,9 +4,6 @@ on:
   release:
     types: [published]
 
-env:
-  DOCKER_BUILDKIT: 0
-
 jobs:
   publish_docker_image:
     timeout-minutes: 30
@@ -16,23 +13,24 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3.0.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        with:
+          platform: linux/amd64,linux/arm64
       - name: Log in to Docker Hub
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push image (amd64)
-        run: |
-            docker build --no-cache -f ./amd64.Dockerfile -t infocus7/trendgenie:latest-amd64 .
-            docker push infocus7/trendgenie:latest-amd64
-      - name: Build and push image (arm64)
-        run:
-            docker build --no-cache -f ./Dockerfile -t infocus7/trendgenie:latest-arm64 .
-            docker push infocus7/trendgenie:latest-arm64
-      - name: Create and push manifest
-        run: |
-          docker manifest create infocus7/trendgenie:latest --amend infocus7/trendgenie:latest-amd64 --amend infocus7/trendgenie:latest-arm64
-          docker manifest push infocus7/trendgenie:latest
-          
-          docker manifest create infocus7/trendgenie:${{ github.event.release.tag_name }} --amend infocus7/trendgenie:latest-amd64 --amend infocus7/trendgenie:latest-arm64
-          docker manifest push infocus7/trendgenie:${{ github.event.release.tag_name }}
+      - name: Build and push (amd64)
+        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
+        with:
+          context: .
+          file: ./.Dockerfile
+          push: true
+          cache-from: type=registry,ref=infocus7/trendgenie:cache
+          cache-to: type=inline,mode=max
+          platforms: linux/amd64,linux/arm64
+          tags: infocus7/trendgenie:latest,infocus7/trendgenie:${{ github.event.release.tag_name }}
