--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
         with:
           context: .
-          file: ./.Dockerfile
+          file: ./Dockerfile
           push: true
           cache-from: type=registry,ref=infocus7/trendgenie:cache
           cache-to: type=inline,mode=max
